--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "./avatar.png"
+  avatar           : "./images/avatar.png"
   name             : "Jiawei Ren"
   pronouns         : # example: "she/her"  
   bio              : "Master’s student in Computer Science at UCSD. Interested in natural language processing, embodied AI, and large language models."
