--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "avatar.png"
   name             : "Jiawei Ren"
   pronouns         : # example: "she/her"  
-  bio              : "Master’s student in Computer Science at UCSD. Interested in natural language processing, embodied AI, and large language models."
+  bio              : "Master’s student in Computer Science at UCSD."
   location         : "La Jolla, CA"
   employer         : "UC San Diego"
   uri              : # URL
